Fix cert URL overflowing in mobile (#96)

--- a/lms/static/sass/certificates/_certificate-template-01.scss
+++ b/lms/static/sass/certificates/_certificate-template-01.scss
@@ -209,6 +209,7 @@
   a {
     color: #fff;
     font-weight: bolder;
+    word-break: break-word;
   }
 
   @media screen {
